# Quant_longbridge_trade

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  pyproject.toml  requirements.txt  tqqq_sqqq_rotation_strategy.ipynb  trade_strategy.ipynb
src/quant_longbridge_trade/: __init__.py  account.py  cli.py  config.py  daemon.py  ema_service.py  historical_data.py  monitor.py  notifier.py  state.py  strategies.py
src/quant_longbridge_trade/brokers/: __init__.py  base.py
src/quant_longbridge_trade/brokers/longbridge/: __init__.py  broker.py
src/quant_longbridge_trade/strategies/: __init__.py  ema_cross.py  indicators.py
tests/: test_feishu_webhook.py  test_live_signal.py  test_tqqq_strategy.py
